# Computer-Architecture-HW

./: CMakeLists.txt  README.md
HW1/: README.md
HW2/: HW2.md
HW3/: README.md  array_sum.s
HW4/: README.md  fact_loop.s
HW5/: README.md  find_sum.s  input_arr.s  macrolib.s  main.s  output.s
HW6/: README.md  macrolib.s  main.s  strncpy.s
HW7/: README.md  macro-syscalls.m  main.s
HW8/: CMakeLists.txt  HW8.cpp  HW8.h  README.md  SumOfAB.cpp
